fix heart icon alignment issue (#455)
* fix heart icon alignment issue

* remove form data when coming from confirm&topup

--- a/src/components/common/CircleOption/style.scss
+++ b/src/components/common/CircleOption/style.scss
@@ -15,8 +15,8 @@
     margin-left: 0.4rem;
     i {
       position: absolute;
-      top: 5px;
-      left: 3px;
+      top: 17.5px;
+      left: 6px;
       font-size: 22px;
     }
   }
